--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 dj-database-url==0.3.0
 dj-static==0.0.6
 Django==1.9
+django-bower==5.0.4
 django-paginator==0.2a3
 django-toolbelt==0.0.1
 feedparser==5.2.1
 gunicorn==19.4.1
 psycopg2==2.6.1
+six==1.10.0
 static3==0.6.1
 wheel==0.24.0
 whitenoise==2.0.6
