--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 dj-database-url==0.3.0
 dj-static==0.0.6
 Django==1.9
+django-autocomplete-light==2.2.10
 django-bower==5.0.4
 django-paginator==0.2a3
 django-sslify==0.2.7
