--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ django-toolbelt==0.0.1
 feedparser==5.2.1
 gunicorn==19.4.1
 psycopg2==2.6.1
+python-dateutil==2.5.2
 six==1.10.0
 static3==0.6.1
-wheel==0.24.0
 whitenoise==2.0.6
