--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,18 @@
-dj-database-url==0.3.0
+appdirs==1.4.3
+dj-database-url==0.4.2
 dj-static==0.0.6
-Django==1.9
-django-autocomplete-light==2.2.10
-django-bower==5.0.4
+Django==1.11
+django-autocomplete-light==3.2.3
+django-bower==5.2.0
 django-paginator==0.2a3
 django-sslify==0.2.7
 django-toolbelt==0.0.1
 feedparser==5.2.1
-gunicorn==19.4.1
-psycopg2==2.6.1
-python-dateutil==2.5.2
+gunicorn==19.7.1
+packaging==16.8
+psycopg2==2.7.1
+pyparsing==2.2.0
+pytz==2017.2
 six==1.10.0
-static3==0.6.1
-whitenoise==2.0.6
+static3==0.7.0
+whitenoise==3.3.0
