--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 appdirs==1.4.3
+boto3==1.4.4
+botocore==1.5.45
 dj-database-url==0.4.2
 dj-static==0.0.6
 Django==1.11
@@ -7,13 +9,17 @@ django-bower==5.2.0
 django-paginator==0.2a3
 django-sslify==0.2.7
 django-toolbelt==0.0.1
+docutils==0.13.1
 feedparser==5.2.1
 gunicorn==19.7.1
+jmespath==0.9.2
 packaging==16.8
 psycopg2==2.7.1
 pyparsing==2.2.0
+python-dateutil==2.6.0
 pytz==2017.2
 PyYAML==3.12
+s3transfer==0.1.10
 six==1.10.0
 static3==0.7.0
 whitenoise==3.3.0
