--- a/beers/fixtures/contest_tests.yaml
+++ b/beers/fixtures/contest_tests.yaml
@@ -1,91 +1,3 @@
-- model: auth.user
-  pk: 1
-  fields:
-    username: user1
-    password: pbkdf2_sha256$36000$Yu6n6XrDZmif$+kzygtQflJXUlF7mbks3Vsk53HTZ+CZhwAZZfSk4ZaY=
-    first_name: First1
-    last_name: Last1
-    email: user1@example.com
-    is_superuser: false
-    is_staff: false
-    is_active: true
-    date_joined: '2016-01-01 00:00:00.00+00:00'
-    groups: [2]
-    user_permissions: []
-- model: auth.user
-  pk: 2
-  fields:
-    username: user2
-    password: pbkdf2_sha256$36000$Yu6n6XrDZmif$+kzygtQflJXUlF7mbks3Vsk53HTZ+CZhwAZZfSk4ZaY=
-    first_name: First2
-    last_name: Last2
-    email: user2@example.com
-    is_superuser: false
-    is_staff: false
-    is_active: true
-    date_joined: '2016-01-01 00:00:00.00+00:00'
-    groups: [2]
-    user_permissions: []
-- model: auth.user
-  pk: 3
-  fields:
-    username: user3
-    password: pbkdf2_sha256$36000$Yu6n6XrDZmif$+kzygtQflJXUlF7mbks3Vsk53HTZ+CZhwAZZfSk4ZaY=
-    first_name: First3
-    last_name: Last3
-    email: user3@example.com
-    is_superuser: false
-    is_staff: false
-    is_active: true
-    date_joined: '2016-01-01 00:00:00.00+00:00'
-    groups: [2]
-    user_permissions: []
-- model: auth.user
-  pk: 4
-  fields:
-    username: runner1
-    password: pbkdf2_sha256$36000$Yu6n6XrDZmif$+kzygtQflJXUlF7mbks3Vsk53HTZ+CZhwAZZfSk4ZaY=
-    first_name: First4
-    last_name: Last4
-    email: user4@example.com
-    is_superuser: false
-    is_staff: false
-    is_active: true
-    date_joined: '2016-01-01 00:00:00.00+00:00'
-    groups: [1,2]
-    user_permissions: []
-- model: beers.player
-  pk: 1
-  fields:
-    user: 1
-    personal_statement: Personal Statement 1
-    city: City 1
-    untappd_username: untapped1
-    untappd_rss: 'https://example.com/rss/untapped1'
-- model: beers.player
-  pk: 2
-  fields:
-    user: 2
-    personal_statement: Personal Statement 2
-    city: City 2
-    untappd_username: untapped2
-    untappd_rss: 'https://example.com/rss/untapped2'
-- model: beers.player
-  pk: 3
-  fields:
-    user: 3
-    personal_statement: Personal Statement 3
-    city: City 3
-    untappd_username: untapped3
-    untappd_rss: 'https://example.com/rss/untapped3'
-- model: beers.player
-  pk: 4
-  fields:
-    user: 4
-    personal_statement: Personal Statement 3
-    city: City 3
-    untappd_username: untapped3
-    untappd_rss: 'https://example.com/rss/untapped3'
 - model: beers.beer
   pk: 1
   fields:
@@ -128,6 +40,34 @@
     brewery_lon: null
     untappd_id: null
     last_updated: '2016-01-01 00:00:00.00+00:00'
+- model: beers.beer
+  pk: 4
+  fields:
+    name: Beer 4
+    brewery: Brewery 4
+    style: Style 4
+    description: ''
+    brewery_city: City 4
+    brewery_state: DC
+    brewery_country: ''
+    brewery_lat: null
+    brewery_lon: null
+    untappd_id: null
+    last_updated: '2016-01-01 00:00:00.00+00:00'
+- model: beers.beer
+  pk: 5
+  fields:
+    name: Beer 5
+    brewery: Brewery 5
+    style: Style 5
+    description: ''
+    brewery_city: City 5
+    brewery_state: DC
+    brewery_country: ''
+    brewery_lat: null
+    brewery_lon: null
+    untappd_id: null
+    last_updated: '2016-01-01 00:00:00.00+00:00'
 - model: beers.contest
   pk: 1
   fields:
@@ -162,6 +102,22 @@
     contest: 1
     beer: 3
     beer_name: Beer 3
+    point_value: 1
+    total_drank: 0
+- model: beers.contest_beer
+  pk: 4
+  fields:
+    contest: 1
+    beer: 1
+    beer_name: Beer 4
+    point_value: 3
+    total_drank: 0
+- model: beers.contest_beer
+  pk: 5
+  fields:
+    contest: 1
+    beer: 1
+    beer_name: Beer 5
     point_value: 3
     total_drank: 0
 - model: beers.contest_player
