--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,15 +3,13 @@ version: '3'
 services:
   db:
     image: postgres
-    ports:
-      - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data/
   web:
     build: .
     command: python3 manage.py runserver 0.0.0.0:8000
     environment:
-      - DATABASE_URL=postgres://postgres@db:5432/hbeers
+      - DATABASE_URL=postgres://postgres@db/hbeers
       - SSL_REDIRECT
       - SECRET_KEY
       - DEBUG
