--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,6 @@ before_script:
   - docker-compose build --force-rm web
   - docker-compose -f docker-compose.yml up -d
 script: 
-  - docker-compose -f docker-compose.yml run web python manage.py test
+  - ./run-tests.sh
 after_script:
   - docker-compose down
