Added SECRET_KEY so collectstatic would run

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,10 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data/
   web:
-    build: .
+    build: 
+      context: .
+      args:
+        - SECRET_KEY
     command: python3 manage.py runserver 0.0.0.0:8000
     environment:
       - DATABASE_URL=postgres://postgres@db/hbeers
