--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,6 @@ before_script:
   - docker-compose build --force-rm web
   - docker-compose -f docker-compose.yml up -d
 script: 
-  - ./run-tests.sh
+  - docker-compose -f docker-compose.yml web run python3 manage.py test
 after_script:
   - docker-compose down
