Added contest bonus definitions

--- a/beers/fixtures/contest_tests.yaml
+++ b/beers/fixtures/contest_tests.yaml
@@ -223,6 +223,22 @@
     brewery_name: Brewery 5
     point_value: 1
     total_visited: 0
+- model: beers.contest_bonus
+  pk: 1
+  fields:
+    contest: 1
+    name: pun
+    description: Punny
+    hash_tags: pun,puns
+    point_value: 1
+- model: beers.contest_bonus
+  pk: 2
+  fields:
+    contest: 1
+    name: ballgame
+    description: Ball game
+    hash_tags: baseball,ballgame
+    point_value: 1
 - model: beers.contest_player
   pk: 1
   fields:
