--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 appdirs==1.4.3
 astroid==1.5.3
 beautifulsoup4==4.6.0
-boto3==1.4.4
-botocore==1.5.45
+boto3==1.9.106
+botocore==1.12.106
 coverage==4.4.1
 dj-database-url==0.4.2
 dj-static==0.0.6
-Django==1.11
+Django==2.1.7
 django-autocomplete-light==3.2.3
 django-bower==5.2.0
 django-paginator==0.2a3
@@ -27,9 +27,10 @@ pylint==1.7.2
 pyparsing==2.2.0
 python-dateutil==2.6.0
 pytz==2017.2
-PyYAML==3.12
-s3transfer==0.1.10
+PyYAML==3.13
+s3transfer==0.2.0
 six==1.10.0
 static3==0.7.0
+urllib3==1.24.1
 whitenoise==3.3.0
 wrapt==1.10.10
