--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       args:
         - SECRET_KEY
     command: python3 manage.py runserver 0.0.0.0:8000
+    env_file: .env
     environment:
       - DATABASE_URL=postgres://postgres@db/hbeers
       - SSL_REDIRECT
