--- a/Pipfile
+++ b/Pipfile
@@ -22,6 +22,7 @@ feedparser = "*"
 djangorestframework = "*"
 django-toolbelt = "*"
 django-bower = "*"
+pyyaml = "*"
 
 [requires]
 python_version = "3.7"
